--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,7 @@
                         </goals>
                         <configuration>
                             <protocVersion>3.21.4</protocVersion>
+                            <addProtoSources>inputs</addProtoSources>
                             <inputDirectories>
                                 <include>src/main/proto</include>
                             </inputDirectories>
@@ -120,6 +121,7 @@
                             <outputTargets>
                                 <outputTarget>
                                     <type>java</type>
+                                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.39.0</pluginArtifact>
                                     <outputDirectory>src/main/java</outputDirectory>
                                 </outputTarget>
                                 <outputTarget>
