--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port: 6789
-compression.enabled: true
-max-http-header-size: 20000
-grpc.port: 6790
+server.port= 6789
+compression.enabled= true
+max-http-header-size= 20000
+grpc.port= 6790
